chore: better organize project

--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Tue Dec 16 13:42:48 CET 2025
+#Tue Dec 16 17:12:20 CET 2025
 default.languagetoolchain.version=4.60
 default.Pack.dfplocation=/Applications/microchip/mplabx/v6.20/packs/Microchip/PIC32MX_DFP/1.5.259
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc32/v4.60/bin
 default.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=1eaf555a844840d91945cb14109201c3
 host.id=1yq8-bhr9-c
-default.platformTool.md5=null
-configurations-xml=51780c14579423d65b0f7b76768f9156
+configurations-xml=f09e93e4afb2be814e813e7635327f1a
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
+default.com-microchip-mplab-mdbcore-pk3ob-PK3OBDbgToolManager.md5=79b6a21eb7d855d755f2a429fe098221
 proj.dir=/Users/ismael/gdrive/supsisma/vault/E3204 Microcontrollers/.data/projects/PIR_lock.X
 host.platform=mac
