--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 build/
 dist/
 .generated_files/
+_build
+cmake
+debug
+out
+
+# ide
+.vscode
 
 # Object files
 *.o
@@ -18,3 +25,4 @@ nbproject/private/
 # OS junk
 .DS_Store
 Thumbs.db
+
